k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  labels:
    name: test-ingress
spec:
  rules:
  - host: template.uoguelph.ca
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: react-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: spring-service
            port: 
              number: 8080
