k8s/manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: gitlab-agent-local
  #cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - amerch04.socs.uoguelph.ca
    secretName: template-tls
  rules:
  - host: amerch04.socs.uoguelph.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port: 
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spring-service
            port: 
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: gitlab-agent-local
spec:
  selector:
    app: spring
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: gitlab-agent-local
spec:
  selector:
    app: react
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: gitlab-agent-local
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
